<resources>
    <string name="app_name">Chess</string>
    <string name="img_description">Chess Logo</string>
    <string name="player_1">Player 1 Name</string>
    <string name="player_2">Player 2 Name</string>
    <string name="start_game">Start Game</string>
    <string name="finish_game">Game finished</string>
    <string name="instructions">Instructions</string>
    <string name="timer">Count-down timer</string>
    <string name="instructions_dlg_title">Chess Game Instructions</string>
    <string name="waiting_dlg_title">Waiting for Player 2</string>
    <string name="game_instructions">
        The white player takes the first move, with players alternating single turns until a player is defeated via checkmate or resigns. A draw can also be agreed. If playing with an optional timer, as in tournaments, the first player to run out of time forfeits the game.\n\n

        In chess, each player takes turns to make a single move. Players cannot choose to skip a turn - they must move a piece. Each chess piece moves in a specific way, and must be moved according to its legal movement.Except for the knight, which may jump over pieces, pieces cannot move through pieces of either colour without either stopping (in the same of a piece of the same colour) or capturing them (in the case of a piece of the opposite colour). \n\n

        If a piece lands on a space with an opponent’s piece, that piece is captured and removed from the board. Pieces cannot be placed on the same square as a piece of the same colour. When a piece captures an opponent’s piece, it must finish its current move action and end the player’s turn. \n\n

        Pawns move one square forward in a straight line. They cannot move horizontally, diagonally or backwards. An exception to this is if a pawn is yet to be moved during the game. If a pawn has not yet moved, it may be moved two squares forward as a single move. Both squares must be empty. The player can also choose to move the piece a single square. The only time a pawn may move diagonally is when capturing an opponent’s piece. Pawns may capture an opponent’s piece on either of the diagonal spaces to the left or right ahead of the piece. As part of capturing the piece, the pawn will move diagonally to replace the captured piece. A pawn cannot capture an adjacent piece on any other square, or move diagonally without capturing. \n\n

        Rooks, sometimes called the castle, can move any number of squares horizontally along its current row (rank) or column (file). It cannot pass through pieces of the same colour, and can capture pieces of the opposite colour by moving onto an occupied space. It cannot move diagonally for any reason. \n\n

        Knights are the only chess piece that may be moved ‘through’ other pieces by ‘jumping’ over them. It captures pieces as normal by landing on a space occupied by a piece of the opposite colour and cannot move to a square occupied by a piece of the same colour, but may move over pieces of either colour during its move. Knights move in a fixed ‘L’ pattern: two squares forward, backward, left or right, then one square horizontally or vertically, or vice versa - one square forward, backward, left or right, followed by two squares horizontally or vertically to complete the ‘L’ shape. This means that the knight can always move to the closest square that is not on its current row (rank), column (file) or directly adjacent diagonally. The knight must move the full distance - it cannot move just two squares in a straight line without also moving one to the side, for instance. \n\n

        Bishops can move any number of squares diagonally - this means it always moves along the diagonal line of squares matching the current colour of its square. This means that each player begins the game with one bishop that can move on each colour. A bishop cannot move horizontally or vertically for any reason. It cannot move through pieces of the same colour, and captures a piece of the opposite colour by moving onto its square. \n\n

        The queen may move any number of squares horizontally, vertically or diagonally. These movements must be made in a single straight line during a single turn. (In other words, you can’t move three squares diagonally, followed by three spaces vertically.) The queen cannot move through pieces of the same colour, and captures a piece of the opposite colour by moving onto its square. \n\n

        The king moves a single space horizontally, vertically or diagonally. The king cannot move into a space that would grant a check or checkmate to the opponent player. As an exception to all other chess pieces, the king is never captured - a player loses the match when the king is placed into checkmate, which would lead to an unavoidable capture on the opponent’s next turn. \n\n

        If a pawn reaches the opposite edge of the board - the farthest row (rank) from the controlling player - it is promoted to another piece: a rook, knight, bishop or queen. The new piece replaces the pawn on its current square, and follows the movement rules for the respective piece. While most casual players use captured pieces to represent promoted pieces, a pawn can legally be promoted to any piece regardless of whether it has been captured. For example, a player may have multiple queens as the result of promoting pawns, or multiple bishops able to move along diagonal lines of the same colour depending on the square on which the pawn was promoted. There is no limit to the number of pawns that can be promoted. \n\n

        When a piece moves in a way that would allow a player to capture the opponent’s king on their next turn, the attacking player typically announces “check”. The player placed into check must move their king or move another piece to stop the attack on their next turn - either by blocking the move or capturing the attacking piece. If a player creates a situation where their opponent cannot stop their king from being captured on the next turn, the attacking player announces “checkmate” and immediately wins the game. The king is never captured - a game of chess is won when a successful checkmate is announced. A player can also choose to resign, granting their opponent the victory.
    </string>
    <string name="done">Done</string>
    <string name="resign">Resign</string>
    <string name="message">Player 1\'s Turn</string>
    <string name="new_game">New Game</string>
    <string name="player_filler">Player</string>
    <string name="winner_is">Winner is:</string>
    <string name="loser_is">Loser is:</string>
    <string name="remember_me">Remember Me?</string>
    <string name="username_input">Username:</string>
    <string name="password_input">Password:</string>
    <string name="create_username_input">Create Username:</string>
    <string name="create_password_input">Create Password:</string>
    <string name="password_confirmed_input">Confirm Password:</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="new_user">New user? Signup!</string>
    <string name="create_user">Create User!</string>
    <string name="waiting">Waiting to connect to another player.</string>
    <string name="available">Available Games</string>
</resources>