<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChessBoardActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/editTextPlayer2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/player_2"
            android:textSize="24sp" />
    </FrameLayout>

    <view
        android:id="@+id/ChessView"
        class="edu.msu.meikenny.chess.ChessBoardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="8" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/editTextPlayer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/player_1"
            android:textSize="24sp" />
    </FrameLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:onClick="onDone"
        android:backgroundTint="#00FF00"
        android:text="@string/done"
        android:textColor="#000000" />

    <Button
        android:id="@+id/resign"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:backgroundTint="#00FF00"
        android:onClick="onResign"
        android:text="@string/resign"
        android:textColor="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical" >

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/timer"
            android:gravity="bottom"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />
    </RelativeLayout>
</LinearLayout>