<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewUserActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:contentDescription="@string/img_description"
        android:padding="10dp"
        app:srcCompat="@drawable/chess_board_full"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/create_username_input"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/create_password_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/passwordConfirmedText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_confirmed_input"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#757575" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/createUserButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_horizontal|center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textSize="12sp"
            android:backgroundTint="#00FF00"
            android:onClick="onCreateUser"
            android:text="@string/create_user"
            android:textColor="#000000" />

    </FrameLayout>

</LinearLayout>