<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="10dp"
        android:contentDescription="@string/img_description"
        app:srcCompat="@drawable/chess_board_full" />

    <EditText
        android:id="@+id/editTextPlayer1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/player_1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/editTextPlayer2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/player_2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="start|center_horizontal|center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#00FF00"
            android:onClick="onStartChess"
            android:text="@string/start_game"
            android:textColor="#000000" />

    </FrameLayout>

</LinearLayout>