<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChessEndActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/winnerTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/winner_is"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/loserTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center|top"
        android:text="@string/loser_is"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="start|center_horizontal|center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#00BCD4"
            android:onClick="onReturnToOpeningScreen"
            android:text="@string/new_game"
            android:textColor="#000000" />

    </FrameLayout>
</LinearLayout>