<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="20sp"
        android:background="#00FF00"
        android:text="@string/available"
        android:textColor="#000000" />

    <ListView
        android:id="@+id/games_listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:background="#00FF00"
        android:gravity="center">

        <Button
            android:id="@+id/new_game_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal|center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="onCreateNewGame"
            android:text="@string/new_game"
            android:textColor="#000000" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal|center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="onLogout"
            android:text="@string/logout"
            android:textColor="#000000" />

    </LinearLayout>


</LinearLayout>